# Haskell-To-C

./: .gitignore  CHANGELOG.md  Haskell-To-C.cabal  LICENSE  example.c  readme.md  shell.nix
app/: Main.hs  example.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
