cabal-version:      3.0
name:               Haskell-To-C
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             S3NP41-v
maintainer:         s3np41v@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Haskell-To-C
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.18.2.1
      , text
      , megaparsec
    hs-source-dirs:   app
    default-language: GHC2021

executable example
    import:           warnings
    main-is:          example.hs

    build-depends:
      base ^>=4.18.2.1

    hs-source-dirs:   app
    default-language: GHC2021
